--- a/src/styles/PortfolioPage.scss
+++ b/src/styles/PortfolioPage.scss
@@ -13,8 +13,6 @@ $white: #FFFFFF;
 
 .portfolio-page {
   h2 {
-    font-size: clamp(1rem, 3vw, 2rem);
-    font-weight: 400;
     text-align: center;
   }
 
@@ -177,6 +175,20 @@ $white: #FFFFFF;
 
     .fill {
       background-color: $green;
+    }
+  }
+}
+
+@media (max-width: 599px) {
+  .portfolio-page .portfolio-item {
+    margin-inline: 0;
+
+    h1 {
+      margin-top: 0;
+    }
+
+    ul {
+      padding-left: 30px;
     }
   }
 }
