--- a/src/styles/ContactPage.scss
+++ b/src/styles/ContactPage.scss
@@ -11,12 +11,28 @@ $shadow-gray: rgb(150, 150, 150);
 $dark-gray: rgb(128, 128, 128);
 $white: #FFFFFF;
 
+.contact-page {
+  h3 {
+    font-family: 'Satisfy', cursive;
+    font-size: clamp(1.5rem, 3vw, 3rem);
+    margin-top: 0;
+    color: $pink;
+  }
+  div {
+    align-items: stretch;
+  }
+
+  p {
+    line-height: 200%;
+  }
+}
+
 .contact {
   border-radius: 20px;
   background-color: $white;
-  padding-block: clamp(50px, 8vw, 150px);
-  padding-inline: clamp(30px, 5vw, 75px);
-
+  padding: clamp(50px, 5vw, 100px) clamp(30px, 5vw, 75px);
+  width: 50%;
+  
   h2 {
     text-align: center;
   }
@@ -26,14 +42,14 @@ $white: #FFFFFF;
     line-height: 200%;
   }
 
-  .contact-info {
+  .contact-link {
     display: flex;
     align-items: center;
 
     a {
       font-weight: 700;
       color: $cherry;
-      margin-right: clamp(10px, 1vw, 20px);
+      margin-right: clamp(15px, 1vw, 20px);
 
       &.icon-link {
         width: clamp(20px, 2.5vw, 40px);
@@ -56,8 +72,63 @@ $white: #FFFFFF;
   }
 }
 
-@media (max-width: 599px) {
+.contact-info {
+  margin-right: clamp(10px, 2vw, 30px);
+}
+
+.contact-form {
+  .form-section {
+    margin-block: clamp(10px, 2vw, 30px);
+  }
+  
+  .form-label {
+    display: block;
+    font-size: clamp(0.75rem, 1.25vw, 1.5rem);
+    text-transform: uppercase;
+  }
+
+  .form-field {
+    width: 100%;
+    margin-block: clamp(10px, 1vw, 20px);
+    border: none;
+    border-radius: 5px;
+    border-bottom: 1px solid $cherry;
+    height: clamp(25px, 3vw, 40px);
+
+    &:focus {
+      border: 1px solid transparent;
+      outline: 1px solid $pink;
+      font-size: clamp(1rem, 1.25vw, 1.5rem);
+    }
+  }
+
+  textarea.form-field {
+    font-family: 'Open Sans', sans-serif;
+    height: clamp(50px, 6vw, 100px);
+  }
+
+  button {
+    text-align: center;
+  }
+}
+
+@media (max-width: 1000px) {
+  .contact-page div.flex-row-center {
+    flex-direction: column;
+
+    h3 {
+      font-size: clamp(1.5rem, 4vw, 3rem);
+    }
+  }
+
   .contact {
     width: auto;
+    flex-grow: 1;
+    padding: clamp(50px, 5vw, 100px) clamp(30px, 8vw, 75px);
+  }
+
+  .contact-info {
+    margin-right: 0;
+    margin-bottom: clamp(10px, 3vw, 30px);
   }
 }
