--- a/src/styles/ContactPage.scss
+++ b/src/styles/ContactPage.scss
@@ -73,10 +73,11 @@ $white: #FFFFFF;
 }
 
 .contact-info {
-  margin-right: clamp(10px, 2vw, 30px);
+  margin-left: clamp(10px, 2vw, 30px);
 }
 
 .contact-form {
+  
   .form-section {
     margin-block: clamp(10px, 2vw, 30px);
   }
@@ -89,6 +90,7 @@ $white: #FFFFFF;
 
   .form-field {
     width: 100%;
+    font-size: clamp(1rem, 1.25vw, 1.5rem);
     margin-block: clamp(10px, 1vw, 20px);
     border: none;
     border-radius: 5px;
@@ -97,8 +99,15 @@ $white: #FFFFFF;
 
     &:focus {
       border: 1px solid transparent;
-      outline: 1px solid $pink;
-      font-size: clamp(1rem, 1.25vw, 1.5rem);
+      outline: 1px solid $green;
+
+      &:required:invalid {
+        outline: 1px solid red;
+      }
+
+      &:required:invalid + .validation-message {
+        display: block;
+      }
     }
   }
 
@@ -109,6 +118,10 @@ $white: #FFFFFF;
 
   button {
     text-align: center;
+  }
+
+  .validation-message {
+    color: red;
   }
 }
 
@@ -138,7 +151,7 @@ $white: #FFFFFF;
   }
 
   .contact-info {
-    margin-right: 0;
-    margin-bottom: clamp(10px, 3vw, 30px);
+    margin-left: 0;
+    margin-top: clamp(10px, 3vw, 30px);
   }
 }
