--- a/src/index.scss
+++ b/src/index.scss
@@ -56,10 +56,6 @@ svg {
   }
 }
 
-.text-align-center {
-  text-align: center;
-}
-
 .flex-row-center {
   display: flex;
   justify-content: center;
@@ -104,20 +100,21 @@ svg {
 }
 
 .page-padding {
-  padding-top: clamp(75px, 6vw, 120px);
+  padding-top: clamp(75px, 5vw, 150px);
 }
 
 .heading {
   font-size: clamp(1.5rem, 3vw, 4rem);
+  color: $pink;
   margin-top: 0;
 }
 
 .btn {
   border-radius: clamp(5px, 0.25vw, 10px);
   border-radius: 50px;
-  min-width: 100px;
+  width: 100px;
   font-size: clamp(0.7rem, 1vw, 1rem);
-  padding-block: clamp(1rem, 1.75vw, 1.5rem);
+  padding-block: clamp(0.5rem, 1.75vw, 1.5rem);
   padding-inline: clamp(1rem, 2.5vw, 2rem);
   margin-right: clamp(5px, 0.75vw, 15px);
   border: none;
@@ -125,7 +122,6 @@ svg {
   color: $white;
   background-color: $cherry;
   border: 1px solid $cherry;
-  
 
     &:hover {
       background-color: $pink;
@@ -165,7 +161,6 @@ svg {
   }
 }
 
-
 @media (max-width: 599px) {
   .app {
     overflow: hidden;
@@ -174,18 +169,6 @@ svg {
   .page-margin {
     margin: clamp(10px, 5vw, 50px);
     margin-top: clamp(65px, 15vw, 100px);
-  }
-
-  .btn {
-    font-size: clamp(0.7rem, 2.5vw, 2rem);
-    padding-block: 4vw;
-    padding-inline: 5vw;
-  }
-}
-
-@media (max-width: 340px) {
-  .page-margin {
-    margin-inline: 5px;
   }
 }
 
