--- a/src/styles/HomePage.scss
+++ b/src/styles/HomePage.scss
@@ -201,6 +201,13 @@ $white: #FFFFFF;
         font-size: clamp(1rem, 2vw, 2rem);
         margin-bottom: 10vw;
       }
+
+      .btn {
+        font-size: clamp(0.7rem, 2.5vw, 2rem);
+        padding-block: 3.5vw;
+        padding-inline: 5vw;
+        
+      }
     }
 
     .phone-container {
