restore site to before merging with contact-form

--- a/src/index.scss
+++ b/src/index.scss
@@ -56,6 +56,10 @@ svg {
   }
 }
 
+.text-align-center {
+  text-align: center;
+}
+
 .flex-row-center {
   display: flex;
   justify-content: center;
